--- a/posts.html
+++ b/posts.html
@@ -19,7 +19,7 @@
             nostrum rerum est autem sunt rem eveniet architecto<br>
         </p>
 
-        <button data-posts="id" value="1" type="button">Show comments</button>
+        <button data-posts="id" value="1" type="button" onclick="aFunction(value)">Show comments</button>
 
         <section class="comments" id="comments-1" hidden>
             <h3>Comments</h3>
@@ -53,7 +53,7 @@
         qui aperiam non debitis possimus qui neque nisi nulla
         </p>
 
-        <button data-posts="id" value="2" type="button">Show comments</button>
+        <button data-posts="id" value="2" type="button" onclick="aFunction(value)">Show comments</button>
 
         <section class="comments" id="comments-2" hidden>
             <h3>Comments</h3>
